--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,13 @@
     <title>17 - Haunted House</title>
   </head>
   <body>
-    <button>Enter to the Haunted House</button>
+    <div class="button-container">
+      <button>
+        Enter to the <br />
+        Haunted House
+      </button>
+    </div>
+
     <canvas class="webgl"></canvas>
   </body>
 </html>
